# gemeinde-protokoll

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml
apps/web/: next.config.ts  package.json
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(admin)/: layout.tsx
apps/web/src/app/(admin)/admin/: page.tsx
apps/web/src/app/(admin)/admin/documents/: page.tsx
apps/web/src/app/(admin)/admin/municipalities/: page.tsx
apps/web/src/app/(admin)/admin/pipeline/: page.tsx
apps/web/src/app/(auth)/login/: page.tsx
apps/web/src/app/(auth)/register/: page.tsx
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/dashboard/: page.tsx
apps/web/src/app/(dashboard)/documents/: page.tsx
apps/web/src/app/(dashboard)/documents/[id]/: page.tsx
apps/web/src/app/(dashboard)/municipalities/: page.tsx
apps/web/src/app/api/register/: route.ts
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx
apps/web/src/lib/: auth.ts  db.ts
apps/web/src/types/: next-auth.d.ts
docs/: ai-parser.md  api.md  database.md  index.md  municipality-configs.md  notifications.md  ocr.md  scraper.md  shared-types.md  web.md
plans/: ProtokolBase_Admin_Tooling.jsx  ProtokolBase_IT_Architecture.jsx  ProtokolBase_PDF_Parser_Guide.jsx  ProtokolBase_Workspace_Architecture.jsx
services/ocr/: app.py  pyproject.toml
services/ocr/src/: page_images.py  pipeline.py  quality.py  tier1_pymupdf.py  tier2_mistral.py  tier3_azure.py
services/ocr/tests/: test_pipeline.py
(+1 files in other folders)
